--- a/llm/_security/pypi_package/makefile
+++ b/llm/_security/pypi_package/makefile
@@ -4,9 +4,9 @@ build:
 	python3 -m build
 
 push:
-	python3 -m twine upload --repository pypi dist/*
+	python3 -m twine upload --skip-existing dist/*
 
 delete:
 	rm -r dist/*
 
-publish: delete build push
+publish: build push
