--- a/llm/_security/pickle/pyproject.toml
+++ b/llm/_security/pickle/pyproject.toml
@@ -21,6 +21,7 @@ python = "3.11.7"
 pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
 fickling = "^0.1.3"
+picklescan = "^0.0.16"
 
 
 [tool.poetry.group.dev.dependencies]
